For the latest news, visit the SparForte web site.

Objective: TBD

CHANGES SINCE 2.6

1. Fix: --without-sound now builds successfully.

2. Fix: --without-readline now builds successfully.


CHANGES SINCE 2.6.1

3. New: more error messages updated to new format.

4. Fix: additional error checks for JSON encoding/decoding.

5. Fix: whitespace handling for JSON encoding/decoding.

6. Fix: boolean values now shown in env command.

7. Fix: an error is reported when bubble or heap sorting arrays containing undefined numeric or enumerated values, instead of raising an exception.

8. Fix: type checking on out mode parameters.

9. Fix: trailing whitespace in a prompt script shows an appropriate message instead of "statement expected".

10. New: New style error messages may include the location where an identifier was declared.
